--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,11 @@ android {
         targetSdkVersion 21
         versionCode 2
         versionName "2.1.3"
+        ndk {
+            moduleName "AIChess"
+            ldLibs "log", "z", "m"
+            abiFilters "armeabi", "armeabi-v7a", "x86"
+        }
     }
     buildTypes {
         release {
