--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,20 +2,31 @@ apply plugin: 'com.android.application'
 
 android {
     signingConfigs {
-    }
-    compileSdkVersion 21
-    buildToolsVersion "21.1.1"
-    defaultConfig {
-        applicationId 'cn.void_3.fourchess'
-        minSdkVersion 15
-        targetSdkVersion 21
-        versionCode 2
-        versionName "2.1.3"
-        ndk {
-            moduleName "AIChess"
-            ldLibs "log", "z", "m"
-            abiFilters "armeabi", "armeabi-v7a", "x86"
+        sign {
+            keyAlias 'FourChess'
+            keyPassword 'mlkove@349521'
+            storePassword 'mlkove@349521'
+            storeFile file('D:/Himmelt/Desktop/P/FourChess/app/FourChess.jks')
         }
+    }
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
+    defaultConfig {
+        applicationId "org.soraworld.fourchess"
+        minSdkVersion 21
+        targetSdkVersion 26
+        versionCode 1
+        versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        jackOptions {
+            enabled true
+        }
+        externalNativeBuild {
+            cmake {
+                cppFlags "-std=c++11"
+            }
+        }
+        signingConfig signingConfigs.sign
     }
     buildTypes {
         release {
@@ -23,11 +34,25 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    externalNativeBuild {
+        cmake {
+            path "CMakeLists.txt"
+        }
+    }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
     productFlavors {
     }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:21.0.2'
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
 }
