--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-include ':app'
-
 buildscript {
     repositories {
+        maven {
+            url 'http://localhost/nexus/content/groups/public/'
+        }
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0'
+        classpath 'com.android.tools.build:gradle:2.3.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
-allprojects {
-    repositories {
-        jcenter()
-    }
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
