--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,6 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MOUNT_FORMAT_FILESYSTEMS" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -14,31 +12,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Welcome">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <activity
-            android:name=".MyMenu"
-            android:label="@string/title_activity_menu"
-            android:screenOrientation="portrait" />
-
-        <activity
-            android:name=".FourChess"
+            android:name=".mode.PPActivity"
             android:label="@string/title_activity_four_chess"
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".About"
-            android:label="@string/title_activity_about"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-
-        <activity
-            android:name=".AIChess"
+            android:name=".mode.AIActivity"
             android:label="@string/title_activity_aichess" />
     </application>
 
